# MLOPS_Taller3

./: README.md
airflow_pinguinos/: Dockerfile  README.md  db.py  docker-compose.yaml  pyproject.toml  requirements.txt
airflow_pinguinos/dags/: penguins_ml_dag.py
airflow_pinguinos/src/airflow_pinguinos/: __init__.py  api.py  config.py  etl.py  train.py
