[project]
name = "airflow-pinguinos"
version = "0.1.0"
description = "Pipeline MLOps con Airflow y API para Palmer Penguins"
readme = "README.md"
authors = [
    { name = "OrozcoJacobo", email = "orozcojacobo1@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
    "pandas",
    "sqlalchemy>=2.0",
    "pymysql",
    "scikit-learn",
    "joblib",
    "palmerpenguins",
    "fastapi",
    "uvicorn[standard]"
]

[project.scripts]
airflow-pinguinos = "airflow_pinguinos:main"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"